# SCU-CPP

./: .gitignore  README.md
Assignment/2023 spring/Assignment public/: main.tex  mpdoc.sty
Assignment/2023 spring/assignment4/: Makefile
Assignment/2023 spring/assignment5/: dataset.csv
Assignment/2023 spring/assignment7/: CMakeLists.txt  README.md
Assignments/2023 spring/assignment4/: README.md
Assignments/2023 spring/assignment5/: readme.md
Assignments/2023 spring/assignment6/: Makefile
Assignments/2024 spring/Task 1/: Tasks 1.md  type.cpp
Assignments/2024 spring/Task 2/: Task 2 Streams.md  operator.txt  table.txt
Exam/2024 spring/: 高级语言程序设计-ⅱ2023期末考试题a卷 - 答案.docx  高级语言程序设计-ⅱ2023期末考试题a卷.docx  高级语言程序设计-ⅱ2023期末考试题b卷 - 答案.docx  高级语言程序设计-ⅱ2023期末考试题b卷.docx
Exam/C++参考试题/: 高级语言程序设计-Ⅱ2022期末考试题A卷_cn(2).docx  高级语言程序设计-Ⅱ2022期末考试题A卷_cn.docx
Exam/C++往届真题/2022/: 高级语言程序设计-Ⅱ2022期末考试题A卷.docx  高级语言程序设计-Ⅱ2022期末考试题A卷答案.docx  高级语言程序设计-Ⅱ2022期末考试题B卷.docx  高级语言程序设计-Ⅱ2022期末考试题B卷答案 .docx
Exam/C++模拟试题/: C++面向对象程序设计模拟试题03.doc  C++面向对象程序设计模拟试题05.doc  C++面向对象程序设计模拟试题07.doc  C++面向对象程序设计模拟试题08.doc  C++面向对象程序设计模拟试题09.doc  C++面向对象程序设计模拟试题10.doc
Exam/c++往届真题/2014/: 高级语言程序设计II考试试题(2014)A.doc  (+3 more)
Lectures/2024 spring/: Lecture10-Advanced Topics-v1.1.pptx  Lecture11-Final Review-v1.1.pptx
Projects/: Useful_opensource_projects4C++.md
Projects/2023 spring/: requirements.txt
Projects/2023 spring/Excellent Project/Yihan Yang&Xiaoyue Wang/All codes/: CMakeLists.txt  _SB_tree.h  main.cpp  map.h  test.cpp  test_map.cpp  test_tree.cpp  tree.cpp  unit_test.cpp
Projects/2023 spring/Excellent Project/Yiheng Du&Jifeng Zhu/smallpt/: CMakeLists.txt
Reference/Assignments/SCU 2023 spring/assignment2/2022141650160-杨欣渝-assignment2/code/5.3/: CMakeLists.txt  RandomGenerator.cpp  RandomGenerator.hpp
Reference/Assignments/SCU 2023 spring/assignment3/Assignment3 高锦梁 2022141450043/LinearAlgebra/: CMakeLists.txt  linearalgebra.cpp  main.cpp
Reference/Assignments/SCU 2023 spring/assignment3/Assignment3 高锦梁 2022141450043/LinearAlgebra/include/: linearalgebra.h
Reference/Assignments/SCU 2023 spring/assignment3/邓雍-2022141220184-assignment3/Assignment_3/LinearAlgebra/: CMakeLists.txt
Reference/Assignments/SCU 2023 spring/assignment3/邓雍-2022141220184-assignment3/Assignment_3/LinearAlgebra/include/: linearalgebra.h
Reference/Assignments/SCU 2023 spring/assignment3/邓雍-2022141220184-assignment3/Assignment_3/LinearAlgebra/src/: linearalgebra.cpp  main.cpp  unit_test.cpp
Reference/Assignments/SCU 2023 spring/assignment4/assignment4_2022141460122_王研博/Login_prj/: CMakeLists.txt
Reference/Assignments/SCU 2023 spring/assignment4/assignment4_2022141460122_王研博/Login_prj/include/: login.h
Reference/Assignments/SCU 2023 spring/assignment4/assignment4_2022141460122_王研博/Login_prj/src/: login.cpp  main.cpp  unit_test.cpp
Reference/Assignments/SCU 2023 spring/assignment4/戈天齐-2022141460202-assignment4/assighment/: CMakeLists.txt  login.cpp  login.h  main.cpp
Reference/Assignments/SCU 2023 spring/assignment5/杨欣渝-2022141650160-assignment5/assignment5/: CMakeLists.txt  readme.md
Reference/Assignments/SCU 2023 spring/assignment5/杨欣渝-2022141650160-assignment5/assignment5/include/: assignment5.h  author.h  book.h  publication.h
Reference/Assignments/SCU 2023 spring/assignment5/杨欣渝-2022141650160-assignment5/assignment5/src/: assignment5.cpp  author.cpp  book.cpp  main.cpp  publication.cpp  unittest.cpp
Reference/Assignments/SCU 2023 spring/assignment5/王枭越_2022141410193_assignment5/Assignment5/: CMakeLists.txt
Reference/Assignments/SCU 2023 spring/assignment5/王枭越_2022141410193_assignment5/Assignment5/include/: assignment5.h  author.h  book.h  publication.h
Reference/Assignments/SCU 2023 spring/assignment5/王枭越_2022141410193_assignment5/Assignment5/src/: assignment5.cpp  author.cpp  book.cpp  main.cpp  publication.cpp  unittest.cpp
Reference/Assignments/SCU 2023 spring/assignment5/高锦梁-2022141450043-assignment5/楂橀敠姊_2022141450043-assignment5/: CMakeLists.txt
Reference/Assignments/SCU 2023 spring/assignment5/高锦梁-2022141450043-assignment5/楂橀敠姊_2022141450043-assignment5/include/: assignment5.h  author.h  book.h  publication.h
Reference/Assignments/SCU 2023 spring/assignment5/高锦梁-2022141450043-assignment5/楂橀敠姊_2022141450043-assignment5/src/: assignment5.cpp  author.cpp  book.cpp  main.cpp  publication.cpp  unittest.cpp
Reference/Assignments/SCU 2023 spring/assignment6/马越-2022141460097-assignment6/马越-2022141460097-assignment6-code/: CMakeLists.txt
Reference/Assignments/SCU 2023 spring/assignment6/马越-2022141460097-assignment6/马越-2022141460097-assignment6-code/cpp/: linkedlist.cpp
Reference/Assignments/SCU 2023 spring/assignment6/马越-2022141460097-assignment6/马越-2022141460097-assignment6-code/h/: linkedlist.h
Reference/Assignments/SCU 2023 spring/assignment6/高锦梁-2022141450043-assignment6/楂橀敠姊_2022141450043-assignment6/: Assignment 6 瀹炶返鎬濊矾.md  CMakeLists.txt
Reference/Assignments/SCU 2023 spring/assignment6/高锦梁-2022141450043-assignment6/楂橀敠姊_2022141450043-assignment6/cpp/: linkedlist.cpp  main.cpp  unittest.cpp
Reference/Assignments/SCU 2023 spring/assignment6/高锦梁-2022141450043-assignment6/楂橀敠姊_2022141450043-assignment6/h/: linkedlist.h
Reference/Assignments/SCU 2023 spring/assignment7/王枭越_2022141410193_assignment7/Assignment7/: CMakeLists.txt
Reference/Assignments/SCU 2023 spring/assignment7/王枭越_2022141410193_assignment7/Assignment7/include/: cappuccino.h  espresso_based.h  ingredient.h  mocha.h  sub_ingredients.h
Reference/Assignments/SCU 2023 spring/assignment7/王枭越_2022141410193_assignment7/Assignment7/src/: cappuccino.cpp  espresso_based.cpp  mocha.cpp  unit_test.cpp
Reference/Assignments/SCU 2023 spring/assignment7/高锦梁-2022141450043-assignment7/: Assignment 7.md  CMakeLists.txt
Reference/Assignments/SCU 2023 spring/assignment7/高锦梁-2022141450043-assignment7/include/: cappuccino.h  espresso_based.h  ingredient.h  mocha.h  sub_ingredients.h
Reference/Assignments/SCU 2023 spring/assignment7/高锦梁-2022141450043-assignment7/src/: cappuccino.cpp  espresso_based.cpp  mocha.cpp  unit_test.cpp
(+1140 files in other folders)
